--- a/OnlineLecture/Views/Admin/Display.cshtml
+++ b/OnlineLecture/Views/Admin/Display.cshtml
@@ -1,4 +1,33 @@
-﻿
+﻿﻿
+
+@model IEnumerable<OnlineLecture.Models.Domain.ApplicationUser>
+
 @{
 }
-welcome, i am admin
+
+<div class="tbl-container">
+    <h2>User List</h2>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Action</th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.UserName</td>
+                <td>@item.Name</td>
+                <td>@item.Email</td>
+                <td>
+                    <a asp-action="Edit" asp-controller="Admin" class="btn btn-default"><i class="fa fa-edit"></i> Edit</a>
+                    <a onclick="return window.confirm('Are you sure?')" href="/Genre/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                </td>
+            </tr>
+        }
+
+    </table>
+    <div class="input-container">
+        <a href="/Genre/Add" class="btn btn-sec">Back</a>
+    </div>
+</div>
