--- a/OnlineLecture/Views/UserAuthentication/Login.cshtml
+++ b/OnlineLecture/Views/UserAuthentication/Login.cshtml
@@ -65,7 +65,11 @@ button {
             <span class="err" asp-validation-for="Username"></span>
             </div>
 
-            
+            @* <label asp-for="Name"><b>Name</b></label>
+            <input type="text" asp-for="Name" placeholder="Enter Name">
+            <div class="msg">
+                <span class="err" asp-validation-for="Name"></span>
+            </div> *@
 
     <label asp-for="Password"><b>Password</b></label>
    <input  type="password" asp-for="Password" placeholder="Enter Password">
