--- a/OnlineLecture/Views/Admin/Display.cshtml
+++ b/OnlineLecture/Views/Admin/Display.cshtml
@@ -1,4 +1,33 @@
-﻿
-@{
-}
-welcome, i am admin
+﻿<div class="container">
+    <h2>Quản lý các mục</h2>
+
+    <div class="row">
+        <!-- Hàng 1 -->
+        <div class="col-md-6">
+            <a href="/Subject/Add" class="btn btn-primary btn-block">Quản lý môn học</a>
+        </div>
+        <div class="col-md-6">
+            <a href="#" class="btn btn-success btn-block">Quản lý người dùng</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Hàng 2 -->
+        <div class="col-md-6">
+            <a href="#" class="btn btn-info btn-block">Quản lí cập nhập</a>
+        </div>
+        <div class="col-md-6">
+            <a href="#" class="btn btn-warning btn-block">Quản lý thời gian</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Hàng 3 -->
+        <div class="col-md-6">
+            <a href="#" class="btn btn-danger btn-block">Quản lý tài khoản</a>
+        </div>
+        <div class="col-md-6">
+            <a href="#" class="btn btn-primary btn-block">Quản lý người học</a>
+        </div>
+    </div>
+</div>
