--- a/OnlineLecture/Views/Subject/Update.cshtml
+++ b/OnlineLecture/Views/Subject/Update.cshtml
@@ -6,8 +6,9 @@
 <div class="container pt-5">
     <div class="row">
         <div class="col-md-6">
-            <h3>Add Subject</h3>
-            <form asp-action="Add" method="post">
+            <h3>Update Subject</h3>
+            <form asp-action="Update" method="post">
+                <input type="hidden" asp-for="IdSubject" />
                 <div class="form-group">
                     <label asp-for="NameSubject">Name Subject*</label>
                     <input type="text" class="form-control" asp-for="NameSubject" />
