--- a/OnlineLecture/Views/Lecture/Update.cshtml
+++ b/OnlineLecture/Views/Lecture/Update.cshtml
@@ -3,26 +3,20 @@
 
 }
 
-<h3>Add Lecture</h3>
+<h3>Update Lecture</h3>
 
-<form asp-action="AddLecture" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
+<form asp-action="Update" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="mb-3">
         <label>Name lecture</label>
         <input asp-for="NameLecture" class="form-control" required />
-        
+
         <span asp-validation-for="NameLecture" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label for="Subjects" class="form-label">Subject</label>
-        <select asp-items="Model.SubjectList" class="form-select" asp-for="Subjects" multiple>
-            <option value="">--Select--</option>
-        </select>
     </div>
     <div class="mb-3">
         <label>Description</label>
         <input asp-for="Description" class="form-control" required />
-     
+
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="mb-3">
@@ -35,6 +29,6 @@
             @TempData["msg"]
         </div>
     }
-    <button type="submit" class="btn btn-success">Create</button>
+    <button type="submit" class="btn btn-success">Update</button>
     <a href="/Lecture/GetAll" class="btn btn-primary">List Lecture</a>
 </form>
