--- a/OnlineLecture/Views/Subject/Add.cshtml
+++ b/OnlineLecture/Views/Subject/Add.cshtml
@@ -8,26 +8,26 @@
         <div class="col-md-6">
             <h3>Add Subject</h3>
             <form asp-action="Add" method="post">
-                <div class="form-group">
-                    <label asp-for="NameSubject">Name Subject*</label>
-                    <input type="text" class="form-control" asp-for="NameSubject" />
+                <div class="mb-2">
+                    <label for="NameSubject" class="form-label">Name Subject*</label>
+                    <input type="text" class="form-control" id="NameSubject" name="NameSubject" />
                     <span asp-validation-for="NameSubject" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Description">Description</label>
-                    <input type="text" class="form-control" asp-for="Description" />
+                <div class="mb-3">
+                    <label for="Description" class="form-label">Description</label>
+                    <input type="text" class="form-control" id="Description" name="Description" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 @if (TempData["msg"] != null)
                 {
-                    <div class="form-group">
+                    <div class="mb-3">
                         @TempData["msg"]
                     </div>
                 }
-                <div class="form-group">
-                    <button type="submit" class="btn btn-dark">Save</button>
-                    <a href="/Subject/GetAll" class="btn btn-primary">List Subject</a>
-                </div>
+
+                <button type="submit" class="btn btn-success">Save</button>
+                <a href="/Subject/GetAll" class="btn btn-primary">List Subject</a>
+
             </form>
         </div>
     </div>
