--- a/OnlineLecture/Views/Subject/GetAll.cshtml
+++ b/OnlineLecture/Views/Subject/GetAll.cshtml
@@ -8,33 +8,33 @@
         <div class="col-md-6">
             <a class="btn btn-success" href="/Subject/Add">Add more</a>
         </div>
-
     </div>
     <div class="row">
         <div class="col-md-6">
             <h3>List Subject</h3>
-            <table class="table table-striped table-bordered table-dark">
+            <table class="table table-striped table-bordered table-light">
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Desciption</th>
+                        <th>Description</th>
                         <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach(var item in Model)
+                    @foreach (var item in Model)
                     {
                         <tr>
                             <td>@item.NameSubject</td>
                             <td>@item.Description</td>
                             <td>
+                                <div class="d-flex justify-content-between">
                                 <a class="btn btn-success" href="/Subject/Update?id=@item.IdSubject">Update</a> |
                                 <a class="btn btn-danger" onclick="return window.confirm('Are you sure?')" href="/Subject/Delete?id=@item.IdSubject">Delete</a> |
-                                <a class="btn btn btn-warning" href="/Lecture/AddLecture">Add lecture</a>
+                                <a class="btn btn-warning" href="/Lecture/AddLecture">Add lecture</a>
+                                </div>
                             </td>
                         </tr>
                     }
-
                 </tbody>
             </table>
         </div>
