--- a/OnlineLecture/Views/Subject/Update.cshtml
+++ b/OnlineLecture/Views/Subject/Update.cshtml
@@ -9,12 +9,12 @@
             <h3>Update Subject</h3>
             <form asp-action="Update" method="post">
                 <input type="hidden" asp-for="IdSubject" />
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <label asp-for="NameSubject">Name Subject*</label>
                     <input type="text" class="form-control" asp-for="NameSubject" />
                     <span asp-validation-for="NameSubject" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label asp-for="Description">Description</label>
                     <input type="text" class="form-control" asp-for="Description" />
                     <span asp-validation-for="Description" class="text-danger"></span>
@@ -25,10 +25,10 @@
                         @TempData["msg"]
                     </div>
                 }
-                <div class="form-group">
-                    <button type="submit" class="btn btn-dark">Save</button>
-                    <a href="/Subject/GetAll" class="btn btn-primary">List Subject</a>
-                </div>
+
+                <button type="submit" class="btn btn-success">Update</button>
+                <a href="/Subject/GetAll" class="btn btn-primary">List Subject</a>
+
             </form>
         </div>
     </div>
