--- a/OnlineLecture/Views/Shared/_Layout.cshtml
+++ b/OnlineLecture/Views/Shared/_Layout.cshtml
@@ -5,39 +5,39 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @* <title>Dotnet6MvcLogin</title> *@
-    <title>@ViewData["Title"]Online Lecture</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/sitOnline Lecturee.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OnlineLecture.styles.css" asp-append-version="true" />
     @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> *@
 </head>
 <body>
-  @*   <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Online Lecture</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="/Dashboard/Display">Dashboard</a></li>
-                @if (User.IsInRole("admin"))
-                {
-                    <li><a href="/Admin/Display">Admin Page</a></li>
-                }
-                @if (!string.IsNullOrEmpty(User.Identity.Name))
-                {
-                    <li><a href="/UserAuthentication/ChangePassword">ChangePassword</a></li>
-                    <li><a href="/UserAuthentication/Logout">Logout</a></li>
-                }
-            </ul>
-        </div>
+    @*   <nav class="navbar navbar-default">
+    <div class="container-fluid">
+    <div class="navbar-header">
+    <a class="navbar-brand" href="#">Online Lecture</a>
+    </div>
+    <ul class="nav navbar-nav">
+    <li><a href="#">Home</a></li>
+    <li><a href="/Dashboard/Display">Dashboard</a></li>
+    @if (User.IsInRole("admin"))
+    {
+    <li><a href="/Admin/Display">Admin Page</a></li>
+    }
+    @if (!string.IsNullOrEmpty(User.Identity.Name))
+    {
+    <li><a href="/UserAuthentication/ChangePassword">ChangePassword</a></li>
+    <li><a href="/UserAuthentication/Logout">Logout</a></li>
+    }
+    </ul>
+    </div>
     </nav> *@
 
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVC05</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Online Lecture</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,9 +52,7 @@
                         </li>
                         @if (User.IsInRole("admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Display">Admin Page</a>
-                            </li>
+                           
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ViewAllUsers">Admin Page</a>
                             </li>
@@ -73,7 +71,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Logout</a>
                             </li>
-                            
+
                         }
                     </ul>
                 </div>
@@ -86,12 +84,17 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        
+    <footer class="border-top footer text-muted" style="margin-top:120px">
+       
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2023 Copyright: Nhom 19
+        </div>
+        <!-- Copyright -->
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-  @*   @await RenderSectionAsync("Scripts", required: false) *@
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
