--- a/OnlineLecture/Views/Home/Index.cshtml
+++ b/OnlineLecture/Views/Home/Index.cshtml
@@ -8,10 +8,14 @@
         <div class="container">
             <h1 class="jumbotron-heading">Welcome @username to Online Lecture!</h1>
             <p class="lead text-muted">You’ll never be brave if you do not get hurt. You’ll never learn if you do not make mistakes.</p>
-            <div class="d-flex h-100 align-items-end">
-                <form class="search-form" asp-action="Index" asp-controller="Home">
-                    <input type="text" value="@ViewBag.SearchString" name="searchString" placeholder="Input name subject">
-                    <button type="submit">Search</button>
+            <div class="d-flex h-100 align-items-end mb-2">
+                <form class="search-form mx-auto" asp-action="Index" asp-controller="Home">
+                    <div class="input-group">
+                        <input type="text" class="form-control" value="@ViewBag.SearchString" name="searchString" placeholder="Input name subject">
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -19,29 +23,27 @@
 
     <div class="album py-5 bg-light">
         <div class="container">
-
             <div class="row">
                 @foreach (var item in Model)
                 {
-
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="/images/default.png" alt="Image defaut subject" />
+                            <!-- Thiết lập kích thước ảnh là 80x80 và margin là 12px -->
+                            <img class="card-img-top" src="https://png.pngtree.com/png-vector/20230318/ourmid/pngtree-the-books-clipart-vector-png-image_6653533.png" alt="Image default subject" style="width: auto; height: 180px; margin: 12px;" />
+
                             <div class="card-body">
                                 <p class="card-text">@item.NameSubject</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" onclick="registerClass(@item.IdSubject)" class="btn btn-sm btn-outline-secondary">Register the class</button>
                                     </div>
-                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 }
-
             </div>
         </div>
     </div>
-
 </main>
+
