--- a/OnlineLecture/Views/Shared/_Layout.cshtml
+++ b/OnlineLecture/Views/Shared/_Layout.cshtml
@@ -7,33 +7,14 @@
     @* <title>Dotnet6MvcLogin</title> *@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/sitOnline Lecturee.css" asp-append-version="true" />
+   @*  <link rel="stylesheet" href="~/css/sitOnline Lecturee.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OnlineLecture.styles.css" asp-append-version="true" />
+
     @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> *@
 </head>
 <body>
-    @*   <nav class="navbar navbar-default">
-    <div class="container-fluid">
-    <div class="navbar-header">
-    <a class="navbar-brand" href="#">Online Lecture</a>
-    </div>
-    <ul class="nav navbar-nav">
-    <li><a href="#">Home</a></li>
-    <li><a href="/Dashboard/Display">Dashboard</a></li>
-    @if (User.IsInRole("admin"))
-    {
-    <li><a href="/Admin/Display">Admin Page</a></li>
-    }
-    @if (!string.IsNullOrEmpty(User.Identity.Name))
-    {
-    <li><a href="/UserAuthentication/ChangePassword">ChangePassword</a></li>
-    <li><a href="/UserAuthentication/Logout">Logout</a></li>
-    }
-    </ul>
-    </div>
-    </nav> *@
-
-
+   
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -84,10 +65,10 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="margin-top:120px">
+    <footer class="border-top footer text-muted" style="background-color: rgba(0, 0, 0, 0.05); margin-top:120px;">
        
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        <div class="text-center p-3">
             © 2023 Copyright: Nhom 19
         </div>
         <!-- Copyright -->
