--- a/OnlineLecture/wwwroot/css/site.css
+++ b/OnlineLecture/wwwroot/css/site.css
@@ -18,5 +18,12 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
 }
