--- a/OnlineLecture/Views/Shared/_Layout.cshtml
+++ b/OnlineLecture/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Display">Dashboard</a>
-                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SubjectRegisted">Registed Subjects</a>
+                        </li>
                         @if (User.IsInRole("admin"))
                         {
                            
