--- a/OnlineLecture/Views/Shared/_Layout.cshtml
+++ b/OnlineLecture/Views/Shared/_Layout.cshtml
@@ -46,9 +46,9 @@
                         }
                         @if (!string.IsNullOrEmpty(User.Identity.Name))
                         {
-                            <li class="nav-item">
+                            @* <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="UserAuthentication" asp-action="ChangePassword">ChangePassword</a>
-                            </li>
+                            </li> *@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="UserAuthentication" asp-action="Logout">Logout</a>
                             </li>
