--- a/OnlineLecture/Views/Admin/ViewAllUsers.cshtml
+++ b/OnlineLecture/Views/Admin/ViewAllUsers.cshtml
@@ -23,13 +23,13 @@
                 <td>@item.Email</td>
                 <td>
                     <a href="/Admin/Update?id=@item.Id" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                    <a onclick="return window.confirm('Are you sure?')" href="/Admin/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                    @* <a onclick="return window.confirm('Are you sure?')" href="/Admin/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a> *@
                 </td>
             </tr>
         }
 
     </table>
     <div class="input-container">
-        <a href="/Genre/Add" class="btn btn-sec">Back</a>
+        <a href="/Home/Index" class="btn btn-sec">Back</a>
     </div>
 </div>
