--- a/OnlineLecture/Views/Home/SubjectRegisted.cshtml
+++ b/OnlineLecture/Views/Home/SubjectRegisted.cshtml
@@ -6,7 +6,7 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">Welcome @username to Your Subjects!</h1>
+            <h1 class="jumbotron-heading">Welcome @username to Your Classes!</h1>
             <p class="lead text-muted">Below is all of classes for you to learn!</p>
         </div>
     </section>
@@ -20,24 +20,32 @@
                         @ViewBag.ErrorMessage
                     </div>
                 }
-                @foreach (var item in Model)
+                else
                 {
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <!-- Thiết lập kích thước ảnh là 80x80 và margin là 12px -->
-                            <img class="card-img-top" src="https://png.pngtree.com/png-vector/20230318/ourmid/pngtree-the-books-clipart-vector-png-image_6653533.png" alt="Image default subject" style="width: auto; height: 180px; margin: 12px;" />
+                    @foreach (var item in Model)
+                    {
 
-                            <div class="card-body">
-                                <p class="card-text">@item.NameSubject</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a class="btn btn-danger" onclick="return window.confirm('You want delete, are you sure?')" href="/Home/DeleteUserSubject?IdSubject=@item.IdSubject">Delete</a>
+                        <div class="col-md-4">
+                            <a class="btn" href="/Home/DetailsSubjectLecture?IdSubject=@item.IdSubject&NameSubject=@item.NameSubject">
+                                <div class="card mb-4 box-shadow">
+                                    <!-- Thiết lập kích thước ảnh là 80x80 và margin là 12px -->
+                                    <img class="card-img-top" src="https://png.pngtree.com/png-vector/20230318/ourmid/pngtree-the-books-clipart-vector-png-image_6653533.png" alt="Image default subject" style="width: auto; height: 180px; margin: 12px;" />
+
+                                    <div class="card-body">
+                                        <p class="card-text">@item.NameSubject</p>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <a class="btn btn-danger" onclick="return window.confirm('You want delete, are you sure?')" href="/Home/DeleteUserSubject?IdSubject=@item.IdSubject"><i class="fas fa-trash-alt"></i> Delete</a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
+
                         </div>
-                    </div>
+                    }
                 }
+
             </div>
         </div>
     </div>
