--- a/OnlineLecture/Views/Shared/_Layout.cshtml
+++ b/OnlineLecture/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
    @*  <link rel="stylesheet" href="~/css/sitOnline Lecturee.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OnlineLecture.styles.css" asp-append-version="true" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> *@
 </head>
 <body>
