update delete lecture ajax

--- a/OnlineLecture/Views/Lecture/GetAll.cshtml
+++ b/OnlineLecture/Views/Lecture/GetAll.cshtml
@@ -7,46 +7,7 @@
     <h3>Subject: </h3>
     <h4>List Lecture</h4>
     <a class="btn btn-success mb-3" asp-controller="Lecture" asp-action="AddLecture">Add lecture</a>
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Name lecture</th>
-                <th>Description</th>
-                <th>File</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-
-                <tr>
-                    <td>@item.NameLecture</td>
-                    <td>@item.Description</td>
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.FileLecture))
-                        {
-                            <a href="@item.FileLecture" target="_blank">File @item.NameLecture</a>
-                        }
-                        else
-                        {
-                            <span>No file available</span>
-                        }
-                    </td>
-                    <td>
-                        @* <div class="d-flex justify-content-between"> *@
-                            <a class="btn btn-success" href="/Lecture/Update?id=@item.IdLecture">Update</a> |
-                            <a class="btn btn-danger" onclick="return window.confirm('Are you sure?')" href="/Lecture/Delete?id=@item.IdLecture">Delete</a>
-                        @* </div> *@
-                    </td>
-                </tr>
-
-                @*   <!-- Add a delete button with a confirmation prompt and AJAX delete request -->
-            <a href="javascript:void(@hanghoa.PkIHanghoaId);" class="btn btn-danger delete-item" data-id="@hanghoa.PkIHanghoaId">
-            <i class="fa fa-trash"></i> Xóa hàng
-            </a> *@
-            }
-        </tbody>
-    </table>
+    <div id="result" class="border" style="height: 550px; overflow:scroll">
+    </div>
 
 </div>
