--- a/OnlineLecture/Views/Home/Index.cshtml
+++ b/OnlineLecture/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="d-flex h-100 align-items-end mb-2">
                 <form class="search-form mx-auto" asp-action="Index" asp-controller="Home">
                     <div class="input-group">
-                        <input type="text" class="form-control" value="@ViewBag.SearchString" name="searchString" placeholder="Input name subject">
+                        <input type="text" class="form-control search" value="@ViewBag.SearchString" name="searchString" placeholder="Input name subject">
                         <div class="input-group-append">
                             <button type="submit" class="btn btn-primary">Search</button>
                         </div>
@@ -30,24 +30,8 @@
                         @ViewBag.ErrorMessage
                     </div>
                 }
-                @foreach (var item in Model)
-                {
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <!-- Thiết lập kích thước ảnh là 80x80 và margin là 12px -->
-                            <img class="card-img-top" src="https://png.pngtree.com/png-vector/20230318/ourmid/pngtree-the-books-clipart-vector-png-image_6653533.png" alt="Image default subject" style="width: auto; height: 180px; margin: 12px;" />
-
-                            <div class="card-body">
-                                <p class="card-text">@item.NameSubject</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="https://localhost:44347/Home/AddTheClass?IdSubject=@item.IdSubject" class="btn btn-success">Register the class</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
+                <div id="result-search" class="border" style="height: 550px; overflow:scroll"></div>
+               
             </div>
         </div>
     </div>
