--- a/OnlineLecture/Views/Home/Index.cshtml
+++ b/OnlineLecture/Views/Home/Index.cshtml
@@ -21,16 +21,16 @@
         </div>
     </section>
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5 bg-light" style="height: 550px;overflow:scroll">
         <div class="container">
-            <div class="row">
+            <div class="row" id="result-search">
                 @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
                 {
                     <div class="alert alert-danger text-center">
                         @ViewBag.ErrorMessage
                     </div>
                 }
-                <div id="result-search" class="border" style="height: 550px; overflow:scroll"></div>
+                
                
             </div>
         </div>
