--- a/OnlineLecture/Views/UserAuthentication/Login.cshtml
+++ b/OnlineLecture/Views/UserAuthentication/Login.cshtml
@@ -30,7 +30,7 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: #aa048b;
+  background-color: lightgreen;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
