--- a/OnlineLecture/Views/Admin/ViewAllUsers.cshtml
+++ b/OnlineLecture/Views/Admin/ViewAllUsers.cshtml
@@ -5,31 +5,40 @@
 @{
 }
 
-<div class="tbl-container">
-    <h2>UserList</h2>
+<div class="container pt-5">
+@*     <div class="row">
+        <div class="col-md-6">
+            <a class="btn btn-success" href="/Subject/Add">Add more</a>
+        </div>
+    </div> *@
+    <div class="row">
+        <div class="col-md-8">
+            <h3>List Subjects</h3>
+            <table class="table table-striped table-bordered table-light">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Name</td>
+                            <td>@item.Email</td>
+                            <td>
+                                <div class="btn-group d-flex justify-content-center">
+                                    <a class="btn btn-success mr-2 borderButon" href="/Admin/Update?id=@item.Id"><i class="fa fa-edit"></i>Update</a>
+                                    <a class="btn btn-danger none borderButon" onclick="return window.confirm('Are you sure?')" href="/Admin/Delete?id=@item.Id"><i class="fa fa-trash"></i>Delete</a>
 
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>UserName</th>
-            <th>Email</th>
-            <th>Action</th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Name</td>
-                <td>@item.UserName</td>
-                <td>@item.Email</td>
-                <td>
-                    <a href="/Admin/Update?id=@item.Id" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                    @* <a onclick="return window.confirm('Are you sure?')" href="/Admin/Delete?id=@item.Id" class="btn btn-danger"><i class="fa fa-trash"></i></a> *@
-                </td>
-            </tr>
-        }
-
-    </table>
-    <div class="input-container">
-        <a href="/Home/Index" class="btn btn-sec">Back</a>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
