--- a/OnlineLecture/Views/Subject/GetAll.cshtml
+++ b/OnlineLecture/Views/Subject/GetAll.cshtml
@@ -4,14 +4,19 @@
 }
 
 <div class="container pt-5">
-    <div class="row">
+    @* <div class="row">
         <div class="col-md-6">
             <a class="btn btn-success" href="/Subject/Add">Add more</a>
         </div>
+    </div> *@
+    <div class="btn-title">
+        <h3>List Subjects</h3>
+        @* <a class="btn btn-success mb-3" asp-controller="Lecture" asp-action="AddLecture">Add lecture</a> *@
+        <a class="btn btn-success" href="/Subject/Add">Add more</a>
     </div>
     <div class="row">
-        <div class="col-md-8">
-            <h3>List Subjects</h3>
+        <div class="">
+            @* <h3>List Subjects</h3> *@
             <table class="table table-striped table-bordered table-light">
                 <thead class="thead-light">
                     <tr>
