--- a/OnlineLecture/Views/UserAuthentication/Registration.cshtml
+++ b/OnlineLecture/Views/UserAuthentication/Registration.cshtml
@@ -2,67 +2,135 @@
 @{
     Layout = null;
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login</title>
 
+    <style>
+
+        form {
+            border: 3px solid #f1f1f1;
+            width: 60%;
+            margin: auto;
+            margin-top: 2%;
+        }
+
+        input[type=text], input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #198754;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .btn-signup {
+            background-color: #0d6efd;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100% !important;
+        }
+
+        .container {
+            padding: 16px;
+        }
+
+        .msg {
+            padding: 0px;
+        }
+
+
+        .err {
+            color: red;
+        }
+
+        .onlec {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
+
+</head>
+<body>
+
+</body>
+</html>
 <div class="container">
     <div class="row">
         <div class="col-md-6 center-block">
-            <h3>Registration</h3>
+            
             <form asp-action="Registration" method="post">
-                @* <div class="form-group">
-                    <label>FName*</label>
-                    <input type="text" class="form-control" asp-for="FirstName"/>
-                    <span class="text-danger"  asp-validation-for="FirstName"></span>
-                </div>
-
-                <div class="form-group">
-                    <label>LName*</label>
-                    <input type="text" class="form-control" asp-for="LastName" />
-                    <span class="text-danger" asp-validation-for="LastName"></span>
-                </div> *@
-                <div class="form-group">
-                    <label>LName*</label>
-                    <input type="text" class="form-control" asp-for="Name" />
-                    <span class="text-danger" asp-validation-for="Name"></span>
-                </div>
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control" asp-for="Email" />
-                    <span class="text-danger" asp-validation-for="Email"></span>
-
-                </div>
-
-                <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" class="form-control" asp-for="Username" />
-                    <span class="text-danger" asp-validation-for="Username"></span>
-
-                </div>
-
-                <div class="form-group">
-                    <label>Password (eg. John@123)</label>
-                    <input type="password" class="form-control" asp-for="Password" />
-                    <span class="text-danger" asp-validation-for="Password"></span>
-
-                </div>
-
-                <div class="form-group">
-                    <label>Password confirm</label>
-                    <input type="password" class="form-control" asp-for="PasswordConfirm" />
-                    <span class="text-danger" asp-validation-for="PasswordConfirm"></span>
-
-                </div>
-
-               
-                
-                @if (TempData["msg"] != null)
-                {
+                <div class="container">
+                    <h1 class="onlec">Registration</h1>
                     <div class="form-group">
-                       <span class="text-info">@TempData["msg"]</span>
+                        <label><b>FullName*</b></label>
+                        <input type="text" class="form-control" asp-for="Name" />
+                        <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
-                }
+                    <div class="form-group">
+                        <label><b>Email</b></label>
+                        <input type="text" class="form-control" asp-for="Email" />
+                        <span class="text-danger" asp-validation-for="Email"></span>
 
-                <button type="submit" class="btn btn-info">Registration</button>
-                <a class="btn btn-primary" href="/UserAuthentication/Login">Login</a>
+                    </div>
+
+                    <div class="form-group">
+                        <label><b>Username*</b></label>
+                        <input type="text" class="form-control" asp-for="Username" />
+                        <span class="text-danger" asp-validation-for="Username"></span>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label><b>Password*</b> (eg. John@123)</label>
+                        <input type="password" class="form-control" asp-for="Password" />
+                        <span class="text-danger" asp-validation-for="Password"></span>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label><b>Password confirm</b></label>
+                        <input type="password" class="form-control" asp-for="PasswordConfirm" />
+                        <span class="text-danger" asp-validation-for="PasswordConfirm"></span>
+
+                    </div>
+
+
+
+                    @if (TempData["msg"] != null)
+                    {
+                        <div class="form-group">
+                            <span class="text-info">@TempData["msg"]</span>
+                        </div>
+                    }
+
+                    <button type="submit" class="btn btn-info">Registration</button>
+
+                    <button type="button" class="btn-signup">
+                        <div>
+                            <a class="btn btn-primary" href="/UserAuthentication/Login">Login</a>
+
+                        </div>
+                    </button>
+                </div>
+                
             </form>
         </div>
     </div>
