--- a/OnlineLecture/Views/Home/Index.cshtml
+++ b/OnlineLecture/Views/Home/Index.cshtml
@@ -21,7 +21,9 @@
         </div>
     </section>
 
-    <div class="album py-5 bg-light" style="height: 550px;overflow:scroll">
+    <div class="album py-5 bg-light" 
+    @* style="height: 550px;overflow:scroll" *@
+    >
         <div class="container">
             <div class="row" id="result-search">
                 @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
