--- a/OnlineLecture/Views/Home/DetailsSubjectLecture.cshtml
+++ b/OnlineLecture/Views/Home/DetailsSubjectLecture.cshtml
@@ -30,6 +30,12 @@
                                     <p class="card-text">@item.NameLecture</p>
                                 </div>
                                 <div class="card-body">
+                                    <p class="card-text">@item.Description</p>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">@item.DateTime</p>
+                                </div>
+                                <div class="card-body">
                                     @if (!string.IsNullOrEmpty(item.FileLecture))
                                     {
                                         <a href="@item.FileLecture" target="_blank">File lecture @item.NameLecture</a>
